@@ -145,6 +145,7 @@ Aldo Cortesi
 David Costanzo
 Scott Cotton
 Greg Couch
+David Cournapeau
 Steve Cousins
 Alex Coventry
 Matthew Dixon Cowles
